src/test/ui/did_you_mean/issue-42599_available_fields_note.stderr
error[E0560]: struct `submodule::Demo` has no field named `inocently_mispellable`
  --> $DIR/issue-42599_available_fields_note.rs:16:39
   |
LL |             Self { secret_integer: 2, inocently_mispellable: () }
   |                                       ^^^^^^^^^^^^^^^^^^^^^ help: a field with a similar name exists: `innocently_misspellable`

error[E0560]: struct `submodule::Demo` has no field named `egregiously_nonexistent_field`
  --> $DIR/issue-42599_available_fields_note.rs:21:39
   |
LL |             Self { secret_integer: 3, egregiously_nonexistent_field: () }
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `submodule::Demo` does not have this field
   |
   = note: available fields are: `favorite_integer`, `secret_integer`, `innocently_misspellable`, `another_field`, `yet_another_field` ... and 2 others

error[E0609]: no field `inocently_mispellable` on type `submodule::Demo`
  --> $DIR/issue-42599_available_fields_note.rs:32:41
   |
LL |     let innocent_field_misaccess = demo.inocently_mispellable;
   |                                         ^^^^^^^^^^^^^^^^^^^^^ help: a field with a similar name exists: `innocently_misspellable`

error[E0609]: no field `egregiously_nonexistent_field` on type `submodule::Demo`
  --> $DIR/issue-42599_available_fields_note.rs:35:42
   |
LL |     let egregious_field_misaccess = demo.egregiously_nonexistent_field;
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `favorite_integer`, `innocently_misspellable`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0560, E0609.
For more information about an error, try `rustc --explain E0560`.
